# datafoundry

./: README.md  pyproject.toml  setup.cfg
datafoundry/: cli.py  core.py
datafoundry/datasets/: reorganizer.py
