[metadata]
license_files = LICENSE
description-file = README.md

[options]
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = .
include = datafoundry*

[options.entry_points]
console_scripts =
    datafoundry = datafoundry.cli:main

[tool:pytest]
addopts = -ra -q
testpaths = tests

[flake8]
max-line-length = 88
extend-ignore = E203, W503

[isort]
profile = black

[coverage:run]
branch = True
